<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="PrivateResource">icetro!</string>
    <string name="starting">Starting....</string>
    <string name="admin_system_user">Admin-System User</string>
    <string name="callAntherForm">Call another form</string>
    <string name="no_customers">Currently there are no Customers</string>
    <string name="no_products">Currently there are no Products</string>
    <string name="no_orders">Currently there are no Orders</string>
    <string name="no_challans">Currently there are no Challans</string>
    <string name="no_outstandings">Currently there are no Outstanding</string>
    <string name="create_user">Create New User ?</string>
    <string name="Check_feed">Check Feed</string>
    <string name="Date">Date</string>
    <string name="GALLERY">Gallery</string>
    <string name="Icentro">ice-tro!</string>
    <string name="LOGIN">LOGIN</string>
    <string name="MAP_OUTLET">MAP OUTLET</string>
    <string name="OFFERS_NOW">OFFERS NOW</string>
    <string name="ORDER_NOW">ORDER NOW</string>
    <string name="ORDER_STATUS">ORDER STATUS</string>
    <string name="PAYMENT_STATUS">PAYMENT STATUS</string>
    <string name="PRODUCT_INFO">PRODUCT INFO.</string>
    <string name="Record">Record</string>
    <string name="SHORTCOMINGS">SHORTCOMINGS</string>
    <string name="Starting">Starting....</string>
    <string name="Update_orders">Upadte Orders</string>
    <string name="amount">Amount</string>
    <string name="amounts">Amount :</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="collect_order">Collect Order</string>
    <string name="current_date">Current Date :</string>
    <string name="current_time">Current Time :</string>
    <string name="date_posted">Date Posted :</string>
    <string name="enter_shortcomings">Enter the Shortcomings</string>
    <string name="enter_the_feedback">Enter the Feedback</string>
    <string name="enter_the_product">Enter the Product</string>
    <string name="enter_the_quantity">Enter the Quantity</string>
    <string name="explore">Explore</string>
    <string name="feeback">Mention Feedback </string>
    <string name="feebacks">Feedback</string>
    <string name="from_date">From Date :</string>
    <string name="from_dates">From Date</string>
    <string name="give_access">Give Access :</string>
    <string name="give_access1">Give Access</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mention_shortcomings">Mention Shortcoming :</string>
    <string name="password">password</string>
    <string name="present_order">Present Order :</string>
    <string name="product">Product :</string>
    <string name="product_type">Product Type :</string>
    <string name="products">Product</string>
    <string name="quantities">Quantity</string>
    <string name="quantity">Quantity :</string>
    <string name="select_the_product">Select the Product</string>
    <string name="serial_no">Serial No.</string>
    <string name="skip">Skip this ..</string>
    <string name="submit">Submit</string>
    <string name="till_dates">Till Date :</string>
    <string name="till_date">Till Date</string>
    <string name="time">Time</string>
    <string name="to_date">To Date</string>
    <string name="update_gallery">Update Gallery</string>
    <string name="update_gallerys">Update Gallery :</string>
    <string name="update_map">Update Map</string>
    <string name="update_offers">Update Offers</string>
    <string name="update_payment">Update Payments</string>
    <string name="update_product">Update Products</string>
    <string name="username">username</string>
    <string name="welcomes_you_to">Welcomes you to</string>
    <string name="customer">Customer :</string>
    <string name="vendor">Vendor :</string>
    <string name="customers">Customer</string>
    <string name="vendors">Vendor</string>
    <string name="admin">Admin</string>
    <string name="retailer_shopowner">Retailer-Shop Owner :</string>
    <string name="admin_sysuser">Admin-System User :</string>
    <string name="retailer">Retailer</string>
    <string name="emp_type">Emp Type :</string>
    <string name="select_the_type">Select the type</string>
    <string name="emp_id">Emp ID :</string>
    <string name="enter_the_id">Enter the ID</string>
    <string name="Employee_apos_s_name">Employee\'s Name : </string>
    <string name="enter_the_employee_apos_s_name">Enter the Employee\'s Name</string>
    <string name="address">Address :</string>
    <string name="enter_the_address">Enter the Address</string>
    <string name="mobile_no">Mobile NO.</string>
    <string name="enter_the_mobile_no">Enter the Mobile NO.</string>
    <string name="gst_no">GST NO.(Optional)</string>
    <string name="enter_the_gst_no">Enter the GST NO.</string>
    <string name="e_mail_id">E-mail ID :</string>
    <string name="enter_the_e_mail_id">Enter the E-Mail ID</string>
    <string name="passwords">Password :</string>
    <string name="enter_the_password">Enter the Password</string>
    <string name="register">Register</string>
    <string name="password_again">Password Again</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="enter_the_customer_apos_s_name">Enter the Customer\'s Name</string>
    <string name="customer_apos_s_name">Customer\'s Name :</string>
    <string name="vendor_apos_s_name">Vendor\'s Name</string>
    <string name="enter_the_vendor_apos_s_name">Enter the Vendor\'s Name</string>
    <string name="shoppe_type">Shoppe Type :</string>
    <string name="owner_apos_s_name">Owner\'s Name</string>
    <string name="enter_the_shop_name">Enter the Shop Name</string>
    <string name="shop_name">Shop Name :</string>
    <string name="Retailer">retailer</string>
    <string name="order_considered">Order Considered.</string>
    <string name="order_inprocess">Order Inprocess.</string>
    <string name="order_on_delivery">Order on Delivery.</string>
    <string name="order_status">Order Status :</string>
    <string name="status">Status</string>
    <string name="dummy_agencies">Dummy Agencies</string>
    <string name="check_feeds">Check Feed :</string>
    <string name="select">--Select--</string>
    <string name="feeds_type">Feeds Type :</string>
    <string name="order_s_received">Order\'s Received :</string>
    <string name="order_s_info">Order\'s Info :</string>
    <string name="consumer_type">Consumer Type :</string>
    <string name="display">Display</string>
    <string name="give_accesss">Give Access :</string>
    <string name="add">Add</string>
    <string name="reject">Reject</string>
    <string name="order_list">Orders List :</string>
    <string name="title_activity_skip_menu">skip_menu</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="consumer_record">Consumer Record :</string>
    <string name="retailer_type">Retailer Type :</string>
    <string name="about">About</string>
    <string name="maps">Maps</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="add_reject">Add/Reject</string>
    <string name="shope_name">Shop Name</string>
    <string name="cart_number">Cart Number :</string>
    <string name="order_id">Order ID</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_the_subject">Enter the Subject</string>
    <string name="subject">Subject</string>
    <string name="remove">Remove</string>
    <string name="order_now">Order Now :</string>
    <string name="generate_order_id">Generate Order ID</string>
    <string name="order_ids">Order ID :</string>
    <string name="item_id">Item ID</string>
    <string name="item_ids">Item ID :</string>
    <string name="items">Item :</string>
    <string name="grand_total">Grand Total :</string>
    <string name="send_order">Send Order</string>
    <string name="past_order">Past Order :</string>
    <string name="special_offer">Special Offer :</string>
    <string name="payment_status">Payment Status :</string>
    <string name="present_feedback">Present Feedback :</string>
    <string name="past_feedback">Past Feedback :</string>
    <string name="enter_the_order_id">Enter the Order ID</string>
    <string name="subjects">Subject :</string>
    <string name="feedback">Feedback :</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="name">Name</string>
    <string name="names">Name :</string>
    <string name="consumer_id">Consumer ID :</string>
    <string name="enter_consumer_id">Consumer ID</string>
    <string name="grand_totals">Grand Total</string>
    <string name="ice_gallery">Ice Gallery :</string>
    <string name="consumer_ids">Consumer ID</string>
    <string name="seen">Seen</string>
    <string name="icetro">icetro!</string>
    <string name="register_admin">Register Admin :</string>
    <string name="register_customer">Register Customer :</string>
    <string name="register_retailer">Register Retailer :</string>
    <string name="admin_menu">Admin Menu :</string>
    <string name="retailer_menu">Retailer Menu :</string>
    <string name="create_album">Create Album :</string>
    <string name="insert_one">Insert One :</string>
    <string name="delete_one">Delete One :</string>
    <string name="albums">Albums :</string>
    <string name="contact_uss">Contact Us :</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="statu">Status :</string>
    <string name="paid_unpaid">Paid/Unpaid</string>
    <string name="description">Description :</string>
    <string name="enter_the_item_id">Enter the Item ID</string>
    <string name="enter_the_item">Enter the Item</string>
    <string name="rate">Rate :</string>
    <string name="add_item">Add Item</string>
    <string name="offer">Offer :</string>
    <string name="enter_the_offer">Enter the Offer</string>
    <string name="particularly">Particularly For :</string>
    <string name="offer_name">Offer Name :</string>
    <string name="enter_the_offer_name">Enter the Offer Name</string>
    <string name="enter_the_item_rate">Enter the Item Rate</string>
    <string name="todo">TODO</string>
    <string name="map">Map</string>
    <string name="item">Item</string>
    <string name="your_profile">Your Profile</string>
    <string name="offer_id">Offer ID</string>
    <string name="offer_ids">Offer ID :</string>
    <string name="for_retailer">For Retailer</string>
    <string name="for_customer">For Customer</string>
    <string name="for_vendor">For Vendor</string>
    <string name="new_item">New Item :</string>
    <string name="copyrights">Copyrights@ Policy</string>
    <string name="about_apps">About App :</string>
    <string name="birla_institute_of_technology">Birla Institute of Technology.</string>
    <string name="mesra_noida">Mesra,Noida.</string>
    <string name="roll_no_bca_4513_17">Roll No. BCA/4513/17</string>
    <string name="icetro_app_distributor_level_business_app">Icetro App - Distributor Level Business App.</string>
    <string name="maunfactured_by_damak_varshney">Maunfactured By - Damak Varshney.</string>
    <string name="helps">help ?</string>
    <string name="contact_policy">Contact@ Policy</string>
    <string name="owner_dummy_agencies">Owner - Dummy Agencies.</string>
    <string name="toll_free_no_1800_5756_88273">Toll Free No. -1800 5756 88273.</string>
    <string name="service_no_98767543234">Service No. - 98767543234.</string>
    <string name="for_any_product_related_complaint_use_our_feedback_policy">For any product related complaint use our feedback policy.</string>
</resources>