<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20sp"
    android:background="@drawable/round_light_bg"
    android:id="@+id/root"
    android:layout_marginTop="20sp"
    android:layout_marginEnd="20sp"
    android:layout_marginBottom="20sp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/offer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10sp"
        android:text="@string/offer_name"
        android:textColor="@color/text_color"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp" />


        <ImageView
            android:id="@+id/offer_image"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="200dp"
            android:contentDescription="@string/todo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/offer_ids"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/offer_id"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:autofillHints=""
            android:hint="@string/offer_id"
            android:textSize="20sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/offer"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:autofillHints=""
            android:hint="@string/enter_the_offer_name"
            android:textSize="20sp" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:text="@string/particularly"
        android:textColor="#000"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/for_retailer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:text="@string/for_retailer"
            android:textSize="20sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/for_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:autofillHints=""
            android:text="@string/for_customer"
            android:textSize="20sp"
            android:visibility="gone" />


    </LinearLayout>

    <TextView
        android:id="@+id/for_vendor"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:autofillHints=""
        android:text="@string/for_vendor"
        android:textSize="20sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/from_date"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/from_date"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:autofillHints=""
            android:hint="@string/enter_the_offer"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/till_dates"
            android:textColor="#000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/till_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:autofillHints=""
            android:hint="@string/enter_the_offer"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>
