<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/maintain_stock_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slide4_bg"
    android:orientation="vertical"
    tools:context=".after_login.admin.a_maintain_stock_new">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/black" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:padding="5dp"
            android:text="@string/new_item"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/black" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/item_ids"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="20dp" />

            <AutoCompleteTextView
                android:id="@+id/ms1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:hint="@string/enter_the_item_id"
                android:textSize="20sp"
                android:layout_marginLeft="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/items"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="20dp" />

            <AutoCompleteTextView
                android:id="@+id/ms2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:hint="@string/enter_the_item"
                android:textSize="20sp"
                android:layout_marginLeft="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/quantity"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="20dp" />

            <AutoCompleteTextView
                android:id="@+id/ms3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:hint="@string/enter_the_quantity"
                android:textSize="20sp"
                android:layout_marginLeft="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/rate"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="20dp" />

            <EditText
                android:id="@+id/ms4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:autofillHints=""
                android:hint="@string/enter_the_item_rate"
                android:textSize="20sp"
                tools:ignore="TextFields"
                android:layout_marginLeft="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/amounts"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_marginLeft="20dp" />

            <TextView
                android:id="@+id/ms5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:autofillHints=""
                android:hint="@string/amount"
                android:textSize="20sp"
                tools:ignore="TextFields"
                android:layout_marginLeft="20dp" />
        </LinearLayout>

        <Button
            android:id="@+id/ms_btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="20sp"
            android:background="@drawable/round_yellow_button"
            android:padding="5sp"
            android:text="@string/add_item"
            android:textColor="@color/button_text"
            android:textSize="15sp"
            tools:ignore="RtlHardcoded"
            android:layout_marginRight="20sp" />


    </LinearLayout>

</ScrollView>
